<resources>
    <string name="app_name">UY</string>
    <string name="log_tag">InvestingGuideApp</string>
    <string name="filter_start_date_label">Start Date</string>
    <string name="filter_end_date_label">End Date</string>
    <string name="security_search_type">Timeline</string>
    <string name="auctioned_label">Past Auctions</string>
    <string name="upcoming_label">Up Coming Auctions</string>
    <string name="search_button_label">Search</string>
    <string name="security_menu_filter_title">Filter Securities To Search</string>
    <string name="return_main_activity_button_label"> &lt;&lt;== Return To Search Menu</string>
    <string name="no_cmb_label">NO CMB FOR THE SELECTED TIMEFRAME</string>
    <string name="no_frn_label">NO FRN FOR THE SELECTED TIMEFRAME</string>
    <string name="no_tips_label">NO TIPS FOR THE SELECTED TIMEFRAME</string>
    <string name="no_notes_label">NO NOTES FOR THE SELECTED TIMEFRAME</string>
    <string name="no_bills_label">NO BILLS FOR THE SELECTED TIMEFRAME</string>
    <string name="security_type_label">Security Type</string>
    <string name="security_type_spinner_description">Select A Security Type To View</string>
    <string name="bill_label">Bill</string>
    <string name="bond_label">Bond</string>
    <string name="tips_label">Tips</string>
    <string name="cmb_label">CMB</string>
    <string name="frn_label">FRN</string>
    <string name="note_label">Note</string>
    <string-array name="security_types">
        <item>@string/bill_label</item>
        <item>@string/bond_label</item>
        <item>@string/note_label</item>
        <item>@string/tips_label</item>
        <item>@string/frn_label</item>
        <item>@string/cmb_label</item>
    </string-array>
</resources>