<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topTopBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/security_menu_filter_title"
        android:textAllCaps="true"
        android:textColor="#00796B"
        app:layout_constraintBottom_toTopOf="@id/topBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/topTopBorder"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/secondLeftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter_start_date_label"
        app:layout_constraintBottom_toTopOf="@id/betweenStartDateAndEndDate"
        app:layout_constraintEnd_toStartOf="@id/secondLeftBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/topBorder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/betweenStartDateAndEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/betweenEndDateAndTimeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <!--
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/beforeSecurityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/security_type_label"
        app:layout_constraintBottom_toTopOf="@id/betweenTimeLineAndSubmitButton"
        app:layout_constraintEnd_toStartOf="@id/secondLeftBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/beforeSecurityType" />

    <Spinner
        android:id="@+id/securityTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/security_type_spinner_description"
        android:spinnerMode="dropdown"
        android:divider="@color/financial_green_200"
        app:layout_constraintBottom_toTopOf="@id/betweenTimeLineAndSubmitButton"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/secondLeftBorder"
        app:layout_constraintTop_toTopOf="@id/beforeSecurityType" />
    -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/betweenTimeLineAndSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        ads:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        ads:layout_constraintGuide_percent="0.88" />


    <DatePicker
        android:id="@+id/startDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:startYear="2018"
        app:layout_constraintBottom_toTopOf="@id/betweenStartDateAndEndDate"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/secondLeftBorder"
        app:layout_constraintTop_toTopOf="@id/topBorder" />

    <DatePicker
        android:id="@+id/endDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:startYear="2018"
        app:layout_constraintBottom_toTopOf="@id/betweenEndDateAndTimeline"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/secondLeftBorder"
        app:layout_constraintTop_toTopOf="@id/betweenStartDateAndEndDate" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter_end_date_label"
        app:layout_constraintBottom_toTopOf="@id/betweenEndDateAndTimeline"
        app:layout_constraintEnd_toStartOf="@id/secondLeftBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/betweenStartDateAndEndDate" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/security_search_type"
        app:layout_constraintBottom_toTopOf="@id/betweenTimeLineAndSubmitButton"
        app:layout_constraintEnd_toStartOf="@id/secondLeftBorder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/betweenEndDateAndTimeline"
         />

    <RadioGroup
        android:id="@+id/auctionOrSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/auctionedChecked"
        app:layout_constraintBottom_toTopOf="@+id/betweenTimeLineAndSubmitButton"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/secondLeftBorder"
        app:layout_constraintTop_toTopOf="@id/betweenEndDateAndTimeline">

        <RadioButton
            android:id="@+id/auctionedChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auctioned_label" />

        <RadioButton
            android:id="@+id/upComingChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_label" />
    </RadioGroup>

    <Button
        android:id="@+id/search_treasury_direct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/financial_green_500"
        android:gravity="center"
        android:text="@string/search_button_label"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/bottomBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/betweenTimeLineAndSubmitButton" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/googleAdvertisement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7397609705602882/7659433639"
        ads:layout_constraintTop_toBottomOf="@+id/bottomBorder"
        ads:layout_constraintStart_toEndOf="@id/leftBorder"
        ads:layout_constraintEnd_toStartOf="@id/rightBorder"
        ads:layout_constraintBottom_toTopOf="@+id/lastBottomBorder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lastBottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

</androidx.constraintlayout.widget.ConstraintLayout>